--- a/InformationWallAndroidApp/app/src/main/res/layout/content_add_contact.xml
+++ b/InformationWallAndroidApp/app/src/main/res/layout/content_add_contact.xml
@@ -12,66 +12,90 @@
     <TableRow
         android:paddingLeft="5dp"
         android:layout_weight="1">
-        <EditText
-            android:id="@+id/edit_black_board_add_item_contact_full_name"
+        <android.support.design.widget.TextInputLayout
             style="@style/BlackBoardAddItemEditText"
-            android:hint="@string/black_board_add_item_contact_full_name"
-            android:layout_weight="1" />
+            android:layout_weight="1">
+            <EditText android:id="@+id/edit_black_board_add_item_contact_full_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="text"
+                android:hint="@string/black_board_add_item_contact_full_name" />
+        </android.support.design.widget.TextInputLayout>
     </TableRow>
     <View
         style="@style/Divider" />
     <TableRow
         android:paddingLeft="5dp"
         android:layout_weight="1">
-        <EditText
-            android:id="@+id/edit_black_board_add_item_contact_email"
+        <android.support.design.widget.TextInputLayout
             style="@style/BlackBoardAddItemEditText"
-            android:hint="@string/black_board_add_item_contact_email"
-            android:layout_weight="1" />
+            android:layout_weight="1">
+            <EditText android:id="@+id/edit_black_board_add_item_contact_email"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textEmailAddress"
+                android:hint="@string/black_board_add_item_contact_email" />
+        </android.support.design.widget.TextInputLayout>
     </TableRow>
     <View
         style="@style/Divider" />
     <TableRow
         android:paddingLeft="5dp"
         android:layout_weight="1">
-        <EditText
-            android:id="@+id/edit_black_board_add_item_contact_telephone"
+        <android.support.design.widget.TextInputLayout
             style="@style/BlackBoardAddItemEditText"
-            android:hint="@string/black_board_add_item_contact_telephone"
-            android:layout_weight="1" />
+            android:layout_weight="1">
+            <EditText android:id="@+id/edit_black_board_add_item_contact_telephone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textEmailAddress"
+                android:hint="@string/black_board_add_item_contact_telephone" />
+        </android.support.design.widget.TextInputLayout>
     </TableRow>
     <View
         style="@style/Divider" />
     <TableRow
         android:paddingLeft="5dp"
         android:layout_weight="1">
-        <EditText
-            android:id="@+id/edit_black_board_add_item_contact_company"
+        <android.support.design.widget.TextInputLayout
             style="@style/BlackBoardAddItemEditText"
-            android:hint="@string/black_board_add_item_contact_company"
-            android:layout_weight="1" />
+            android:layout_weight="1">
+            <EditText android:id="@+id/edit_black_board_add_item_contact_company"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textEmailAddress"
+                android:hint="@string/black_board_add_item_contact_company" />
+        </android.support.design.widget.TextInputLayout>
     </TableRow>
     <View
         style="@style/Divider" />
     <TableRow
         android:paddingLeft="5dp"
         android:layout_weight="1">
-        <EditText
-            android:id="@+id/edit_black_board_add_item_contact_street"
+        <android.support.design.widget.TextInputLayout
             style="@style/BlackBoardAddItemEditText"
-            android:hint="@string/black_board_add_item_contact_street"
-            android:layout_weight="1" />
+            android:layout_weight="1">
+            <EditText android:id="@+id/edit_black_board_add_item_contact_street"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textEmailAddress"
+                android:hint="@string/black_board_add_item_contact_street" />
+        </android.support.design.widget.TextInputLayout>
     </TableRow>
     <View
         style="@style/Divider" />
     <TableRow
         android:paddingLeft="5dp"
         android:layout_weight="1">
-        <EditText
-            android:id="@+id/edit_black_board_add_item_contact_city"
+        <android.support.design.widget.TextInputLayout
             style="@style/BlackBoardAddItemEditText"
-            android:hint="@string/black_board_add_item_contact_city"
-            android:layout_weight="1" />
+            android:layout_weight="1">
+            <EditText android:id="@+id/edit_black_board_add_item_contact_city"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textEmailAddress"
+                android:hint="@string/black_board_add_item_contact_city" />
+        </android.support.design.widget.TextInputLayout>
     </TableRow>
     <View
         style="@style/Divider" />
