Rewritten uploadAttachments; Change OnDestroy to OnDestroyView in AddItem Fragment to reset gui; Change DialogTitle Background

--- a/InformationWallAndroidApp/app/src/main/res/layout/dialog_tile_long_click_title.xml
+++ b/InformationWallAndroidApp/app/src/main/res/layout/dialog_tile_long_click_title.xml
@@ -3,7 +3,8 @@
     android:id="@+id/dialogTitle"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/ci_color_dark">
 
     <LinearLayout
         android:layout_width="match_parent"
