--- a/InformationWallAndroidApp/app/src/main/res/layout/dialog_black_board_item_long_click_title.xml
+++ b/InformationWallAndroidApp/app/src/main/res/layout/dialog_black_board_item_long_click_title.xml
@@ -9,6 +9,7 @@
         android:id="@+id/dialogTitleText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="@android:color/white"
         android:text="@string/title"
         android:textSize="25sp"
         android:padding="15dp"
