--- a/InformationWallAndroidApp/app/src/main/res/layout/dialog_tile_long_click_title.xml
+++ b/InformationWallAndroidApp/app/src/main/res/layout/dialog_tile_long_click_title.xml
@@ -4,7 +4,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:background="@color/ci_color_dark">
+    android:background="@color/ci_color_light">
 
     <LinearLayout
         android:layout_width="match_parent"
