--- a/InformationWallAndroidApp/app/src/main/res/layout/activity_tile_overview.xml
+++ b/InformationWallAndroidApp/app/src/main/res/layout/activity_tile_overview.xml
@@ -11,9 +11,14 @@
         android:id="@+id/gridview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:verticalSpacing="0dp"
-        android:horizontalSpacing="0dp"
+        android:verticalSpacing="5dp"
+        android:horizontalSpacing="5dp"
+        android:layout_marginRight="@dimen/tile_overview_margin"
+        android:layout_marginLeft="@dimen/tile_overview_margin"
+        android:paddingTop="@dimen/tile_overview_margin"
         android:layout_marginTop="?attr/actionBarSize"
+        android:clipToPadding="false"
+        android:scrollbarStyle="outsideOverlay"
         android:stretchMode="columnWidth"
         android:numColumns="2" />
 
