--- a/InformationWallAndroidApp/app/src/main/res/values/dimens.xml
+++ b/InformationWallAndroidApp/app/src/main/res/values/dimens.xml
@@ -4,10 +4,15 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="black_board_ex_lv_padding">10dp</dimen>
+    <dimen name="actionBarSize">?attr/actionBarSize</dimen>
 
     <!-- Items -->
     <dimen name="list_item_height">50dp</dimen>
 
     <!-- BlackBoard Item Add -->
     <dimen name="black_board_add_item_label">80dp</dimen>
+
+    <!-- TileOverview magrin -->
+    <dimen name="tile_overview_margin">5dp</dimen>
+
 </resources>
