--- a/InformationWallAndroidApp/app/src/main/res/layout/fragment_black_board_add_item.xml
+++ b/InformationWallAndroidApp/app/src/main/res/layout/fragment_black_board_add_item.xml
@@ -16,11 +16,16 @@
         <TableRow
             android:paddingLeft="5dp"
             android:layout_weight="1">
-            <EditText
-                android:id="@+id/edit_black_board_add_item_title"
+            <android.support.design.widget.TextInputLayout
                 style="@style/BlackBoardAddItemEditText"
-                android:hint="@string/black_board_add_item_title"
-                android:layout_weight="1"/>
+                android:layout_weight="1">
+                <EditText
+                    android:id="@+id/edit_black_board_add_item_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@android:color/transparent"
+                    android:hint="@string/black_board_add_item_title" />
+            </android.support.design.widget.TextInputLayout>
         </TableRow>
         <View
             style="@style/Divider" />
@@ -30,9 +35,9 @@
             android:layout_weight="1">
             <AutoCompleteTextView
                 android:id="@+id/ac_tv_black_board_add_item_contact"
-                android:hint="@string/black_board_add_item_contact"
                 style="@style/BlackBoardAddItemEditText"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                android:hint="@string/black_board_add_item_contact" />
             <ImageButton
                 android:id="@+id/ib_tv_black_board_add_item_contact"
                 android:layout_width="match_parent"
@@ -51,13 +56,18 @@
         <TableRow
             android:paddingLeft="5dp"
             android:layout_weight="3">
-            <EditText
-                android:id="@+id/edit_black_board_add_item_description"
+            <android.support.design.widget.TextInputLayout
                 style="@style/BlackBoardAddItemEditText"
-                android:hint="@string/black_board_add_item_description"
-                android:gravity="top"
-                android:maxLength="130"
-                android:layout_weight="1" />
+                android:layout_weight="1">
+                <EditText
+                    android:id="@+id/edit_black_board_add_item_description"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@android:color/transparent"
+                    android:hint="@string/black_board_add_item_description"
+                    android:gravity="top"
+                    android:maxLength="130" />
+            </android.support.design.widget.TextInputLayout>
         </TableRow>
         <View
             style="@style/Divider" />
