--- a/InformationWallAndroidApp/app/src/main/res/layout/content_black_board_overview.xml
+++ b/InformationWallAndroidApp/app/src/main/res/layout/content_black_board_overview.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/swipe_refresh_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:showIn="@layout/activity_black_board"
@@ -12,4 +12,4 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"></ExpandableListView>
 
-</RelativeLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
