--- a/InformationWallAndroidApp/app/src/main/res/drawable/tv_circle.xml
+++ b/InformationWallAndroidApp/app/src/main/res/drawable/tv_circle.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <corners android:radius="10dip"/>
+    <corners android:radius="150dp"/>
     <stroke android:color="@color/ci_color" android:width="2dip"/>
     <solid android:color="@color/ci_color"/>
 </shape>
