--- a/InformationWallAndroidApp/app/src/main/res/layout/account_item.xml
+++ b/InformationWallAndroidApp/app/src/main/res/layout/account_item.xml
@@ -1,36 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:weightSum="5">
-    <TextView
-        android:id="@+id/tv_account_overview_first_char"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:background="@drawable/tv_circle"
-        android:layout_weight="1"/>
+<android.support.v7.widget.CardView
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    card_view:cardElevation="10dp"
+    android:layout_width="match_parent"
+    android:layout_height="80dp">
     <LinearLayout
-        android:layout_width="0dp"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:paddingLeft="5dp"
-        android:layout_weight="3"
-        android:weightSum="2">
+        android:padding="10dp"
+        android:weightSum="4">
         <TextView
-            android:id="@+id/tv_account_overview_email"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"/>
-        <TextView
-            android:id="@+id/tv_account_overview_server"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:id="@+id/tv_account_overview_first_char"
+            android:layout_width="60dp"
+            android:layout_height="match_parent"
+            android:textColor="@android:color/white"
+            android:textStyle="bold"
+            android:gravity="center"
+            android:background="@drawable/tv_circle" />
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:paddingLeft="10dp"
+            android:layout_weight="3"
+            android:weightSum="2">
+            <TextView
+                android:id="@+id/tv_account_overview_email"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"/>
+            <TextView
+                android:id="@+id/tv_account_overview_server"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"/>
+        </LinearLayout>
+
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_arrow_right"
             android:layout_weight="1"/>
     </LinearLayout>
-
-    <ImageButton
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:background="@android:color/transparent"/>
-</LinearLayout>
+</android.support.v7.widget.CardView>
