--- a/InformationWallAndroidApp/app/src/main/res/layout/fragment_account_overview.xml
+++ b/InformationWallAndroidApp/app/src/main/res/layout/fragment_account_overview.xml
@@ -1,14 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="56dp"
-    android:paddingLeft="24dp"
-    android:paddingRight="24dp">
+    android:paddingTop="10dp"
+    android:weightSum="1">
 
     <ListView
         android:id="@+id/lv_account_overview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></ListView>
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:paddingBottom="10dp">
+    </ListView>
+
+    <android.support.v7.widget.CardView
+        card_view:cardElevation="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <Button
+            android:id="@+id/bt_new_account"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:elevation="10dp"
+            android:padding="10dp"
+            android:background="@android:color/transparent"
+            android:text="@string/fragment_account_overview_new_account"/>
+    </android.support.v7.widget.CardView>
 </LinearLayout>
