--- a/InformationWallAndroidApp/app/src/main/res/layout/account_item.xml
+++ b/InformationWallAndroidApp/app/src/main/res/layout/account_item.xml
@@ -31,6 +31,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"/>
+            <View
+                style="@style/Divider" />
             <TextView
                 android:id="@+id/tv_account_overview_server"
                 android:layout_width="match_parent"
