small layout changes

--- a/InformationWallAndroidApp/app/src/main/res/layout/fragment_black_board_add_item.xml
+++ b/InformationWallAndroidApp/app/src/main/res/layout/fragment_black_board_add_item.xml
@@ -71,6 +71,23 @@
         </TableRow>
         <View
             style="@style/Divider" />
+
+        <!-- Layout -->
+        <TableRow
+            android:paddingLeft="5dp"
+            android:layout_weight="1">
+            <Button
+                android:id="@+id/b_black_board_add_layout"
+                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:background="@android:color/transparent"
+                android:layout_weight="1"
+                android:text="@string/black_board_add_layout"/>
+        </TableRow>
+
+        <View
+            style="@style/Divider" /> 
+
         <!-- Attachments -->
         <TableRow
             android:paddingLeft="5dp"
@@ -83,8 +100,10 @@
                 android:layout_weight="1"
                 android:text="@string/black_board_add_item_attachments"/>
         </TableRow>
+
         <View
             style="@style/Divider" />
+
         <LinearLayout
             android:id="@+id/ll_attachment_container"
             android:layout_width="match_parent"
@@ -92,20 +111,6 @@
             android:paddingLeft="5dp"
             android:layout_weight="3"
             android:orientation="vertical"/>
-        <View
-            style="@style/Divider" />
-        <!-- Attachments -->
-        <TableRow
-            android:paddingLeft="5dp"
-            android:layout_weight="1">
-            <Button
-                android:id="@+id/b_black_board_add_layout"
-                android:layout_height="match_parent"
-                android:layout_width="match_parent"
-                android:background="@android:color/transparent"
-                android:layout_weight="1"
-                android:text="@string/black_board_add_layout"/>
-        </TableRow>
     </TableLayout>
 
 </ScrollView>
