--- a/InformationWallAndroidApp/app/src/main/res/layout/activity_layout_selection.xml
+++ b/InformationWallAndroidApp/app/src/main/res/layout/activity_layout_selection.xml
@@ -1,19 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <include layout="@layout/custom_app_bar_layout"></include>
+    <include
+        android:id="@+id/actionBar"
+        layout="@layout/custom_app_bar_layout"></include>
 
     <TextView
+        android:id="@+id/layoutSelection_infoText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/abc_search_hint" />
+        android:text="Please select a Layout-Template"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:textSize="15dp"
+        />
 
     <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/pager"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:layout_margin="10dp"
+        android:layout_gravity="center_horizontal"
+        />
 
     <RelativeLayout
         android:id="@+id/viewPagerIndicator"
@@ -32,12 +44,13 @@
     </RelativeLayout>
 
     <Button
-        android:id="@+id/btn_save"
+        android:id="@+id/btn_save_layout"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
-        android:layout_marginBottom="28dp"
-        android:padding="12dp"
+        android:padding="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:background="#9d9d9d"
         android:textColor="@android:color/white"
         android:text="Speichern"
