--- a/InformationWallAndroidApp/app/src/main/res/layout/activity_layout_selection.xml
+++ b/InformationWallAndroidApp/app/src/main/res/layout/activity_layout_selection.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <include
-        android:id="@+id/actionBar"
         layout="@layout/custom_app_bar_layout"></include>
 
     <TextView
@@ -56,4 +55,4 @@
         android:text="Speichern"
         />
 
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
