Bug fix layout layout_selection

--- a/InformationWallAndroidApp/app/src/main/res/layout/content_black_board_overview.xml
+++ b/InformationWallAndroidApp/app/src/main/res/layout/content_black_board_overview.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:showIn="@layout/activity_black_board"
-    tools:context="wipraktikum.informationwallandroidapp.BlackBoard.BlackBoardOverview">
+    tools:context=".BlackBoard.BlackBoardOverview">
 
     <ExpandableListView
         android:id="@+id/ex_lv_black_board"
