--- a/InformationWallAndroidApp/app/src/main/res/layout/content_black_board_layout_selection.xml
+++ b/InformationWallAndroidApp/app/src/main/res/layout/content_black_board_layout_selection.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
+    android:layout_marginTop="?attr/actionBarSize"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-    <include
-        layout="@layout/custom_app_bar_layout"></include>
 
     <TextView
         android:id="@+id/layoutSelection_infoText"
@@ -15,16 +14,14 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
-        android:textSize="15dp"
-        />
+        android:textSize="15dp" />
 
     <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/pager"
         android:layout_width="match_parent"
         android:layout_height="300dp"
         android:layout_margin="10dp"
-        android:layout_gravity="center_horizontal"
-        />
+        android:layout_gravity="center_horizontal" />
 
     <RelativeLayout
         android:id="@+id/viewPagerIndicator"
@@ -52,7 +49,6 @@
         android:layout_marginRight="20dp"
         android:background="#9d9d9d"
         android:textColor="@android:color/white"
-        android:text="Speichern"
-        />
+        android:text="Speichern" />
 
-</android.support.design.widget.CoordinatorLayout>
+</LinearLayout>
