--- a/InformationWallAndroidApp/app/src/main/res/layout/fragment_blackboard_layout_selection.xml
+++ b/InformationWallAndroidApp/app/src/main/res/layout/fragment_blackboard_layout_selection.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    android:orientation="vertical"
-    tools:context="wipraktikum.informationwallandroidapp.BlackBoard.BlackBoard">
+    tools:context=".BlackBoard.BlackBoardItemLayoutSelection">
 
-    <include layout="@layout/content_black_board_overview" />
+    <include layout="@layout/content_blackboard_layout_selection"></include>
 
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
