--- a/InformationWallAndroidApp/app/src/main/res/layout/dialog_blackboard_attachment_long_click.xml
+++ b/InformationWallAndroidApp/app/src/main/res/layout/dialog_blackboard_attachment_long_click.xml
@@ -2,5 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-
+    <Button
+        android:id="@+id/bt_black_board_attachment_delete_dialog"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:text="@string/black_board_long_click_dialog_delete"
+        android:gravity="left|center_vertical"
+        android:paddingLeft="10dp"
+        android:background="@android:color/transparent" />
+    <View
+        style="@style/Divider" />
 </LinearLayout>
