--- a/InformationWallAndroidApp/app/src/main/res/layout/content_logo.xml
+++ b/InformationWallAndroidApp/app/src/main/res/layout/content_logo.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:orientation="vertical" android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:paddingBottom="20dp">
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
         android:src="@drawable/icon_main"/>
 
 </LinearLayout>
