--- a/InformationWallAndroidApp/app/src/main/res/layout/dialog_blackboard_item_long_click.xml
+++ b/InformationWallAndroidApp/app/src/main/res/layout/dialog_blackboard_item_long_click.xml
@@ -7,7 +7,7 @@
     <Button
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:text="@string/black_board_long_click_dialog_edit"
+        android:text="@string/edit"
         android:gravity="left|center_vertical"
         android:textAlignment="gravity"
         android:paddingLeft="10dp"
@@ -18,7 +18,7 @@
     <Button
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:text="@string/black_board_long_click_dialog_delete"
+        android:text="@string/delete"
         android:gravity="left|center_vertical"
         android:paddingLeft="10dp"
         android:background="@android:color/transparent"
