--- a/InformationWallAndroidApp/app/src/main/res/layout/account_item.xml
+++ b/InformationWallAndroidApp/app/src/main/res/layout/account_item.xml
@@ -4,7 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     card_view:cardElevation="10dp"
     android:layout_width="match_parent"
-    android:layout_height="80dp">
+    android:layout_height="wrap_content">
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
@@ -14,35 +14,39 @@
         <TextView
             android:id="@+id/tv_account_overview_first_char"
             android:layout_width="60dp"
-            android:layout_height="match_parent"
+            android:layout_height="60dp"
             android:textColor="@android:color/white"
             android:textStyle="bold"
+            android:layout_gravity="center"
             android:gravity="center"
             android:background="@drawable/tv_circle" />
         <LinearLayout
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
+            android:layout_gravity="center"
             android:paddingLeft="10dp"
             android:layout_weight="3"
             android:weightSum="2">
             <TextView
                 android:id="@+id/tv_account_overview_email"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
+                android:gravity="center"
                 android:layout_height="0dp"
                 android:layout_weight="1"/>
             <View
                 style="@style/Divider" />
             <TextView
                 android:id="@+id/tv_account_overview_server"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
+                android:gravity="center"
                 android:layout_height="0dp"
                 android:layout_weight="1"/>
         </LinearLayout>
 
         <ImageView
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="60dp"
             android:src="@drawable/ic_arrow_right"
             android:layout_weight="1"/>
     </LinearLayout>
