--- a/InformationWallAndroidApp/app/src/main/res/layout/content_logo.xml
+++ b/InformationWallAndroidApp/app/src/main/res/layout/content_logo.xml
@@ -5,6 +5,7 @@
     android:paddingBottom="20dp">
 
     <ImageView
+        android:layout_gravity="center"
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:src="@drawable/icon_main"/>
