Blackboard Overview 4.x GUI angepasst

--- a/InformationWallAndroidApp/app/src/main/res/layout/blackboard_ex_lv_group.xml
+++ b/InformationWallAndroidApp/app/src/main/res/layout/blackboard_ex_lv_group.xml
@@ -16,7 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:textStyle="bold"
-            android:textAppearance="@android:style/TextAppearance.Material.Title"
+            android:textAppearance="@style/CompatMaterialTitle"
             android:paddingBottom="5dp"
             android:text="@string/black_board_no_title"
             android:singleLine="false"
@@ -26,7 +26,7 @@
             android:id="@+id/tv_black_board_item_last_edited"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:textAppearance="@android:style/TextAppearance.Material.Caption"
+            android:textAppearance="@style/CompatMaterialCaption"
             android:text="@string/black_board_no_item_information"
             android:layout_weight="9"
             android:paddingRight="5dp"
