--- a/InformationWallAndroidApp/app/src/main/res/layout/fragment_blackboard_add_item.xml
+++ b/InformationWallAndroidApp/app/src/main/res/layout/fragment_blackboard_add_item.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="wipraktikum.informationwallandroidapp.BlackBoard.BlackBoard">
+    tools:context=".Blackboard.BlackBoard">
 
     <TableLayout
         android:orientation="vertical"
