added POST method to json manager for rss search

--- a/InformationWallAndroidApp/app/src/main/res/layout/content_blackboard_overview.xml
+++ b/InformationWallAndroidApp/app/src/main/res/layout/content_blackboard_overview.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:showIn="@layout/activity_blackboard"
-    tools:context=".Blackboard.BlackBoardOverview">
+    tools:context=".BlackBoard.BlackBoardOverview">
 
     <ExpandableListView
         android:id="@+id/ex_lv_black_board"
