--- a/InformationWallAndroidApp/app/src/main/res/layout/fragment_blackboard_layout_selection.xml
+++ b/InformationWallAndroidApp/app/src/main/res/layout/fragment_blackboard_layout_selection.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".Blackboard.BlackBoardItemLayoutSelection">
+    tools:context=".BlackBoard.BlackBoardItemLayoutSelection">
 
     <include layout="@layout/content_blackboard_layout_selection"></include>
 
