--- a/InformationWallAndroidApp/app/src/main/res/layout/fragment_blackboard_overview.xml
+++ b/InformationWallAndroidApp/app/src/main/res/layout/fragment_blackboard_overview.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     android:orientation="vertical"
-    tools:context="wipraktikum.informationwallandroidapp.Blackboard.BlackBoard">
+    tools:context="wipraktikum.informationwallandroidapp.BlackBoard.BlackBoard">
 
     <include layout="@layout/content_blackboard_overview" />
 
