--- a/InformationWallAndroidApp/app/src/main/res/layout/activity_feed_reader.xml
+++ b/InformationWallAndroidApp/app/src/main/res/layout/activity_feed_reader.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".Feedreader.FeedReader">
+    tools:context=".Feedreader.Feedreader">
 
     <include layout="@layout/custom_app_bar_layout"></include>
 
