--- a/InformationWallAndroidApp/app/src/main/res/layout/activity_blackboard.xml
+++ b/InformationWallAndroidApp/app/src/main/res/layout/activity_blackboard.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".BlackBoard.BlackBoard">
+    tools:context=".BlackBoard.Blackboard">
 
     <include layout="@layout/custom_app_bar_layout"></include>
 
