--- a/InformationWallAndroidApp/app/src/main/res/layout/content_add_contact.xml
+++ b/InformationWallAndroidApp/app/src/main/res/layout/content_add_contact.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="15dp"
-    tools:context="wipraktikum.informationwallandroidapp.BlackBoard.BlackBoard">
+    tools:context=".BlackBoard.Blackboard">
 
     <TableRow
         android:paddingLeft="5dp"
