Save Feeds to db

--- a/InformationWallAndroidApp/app/src/main/res/layout/fragment_feed_reader_overview.xml
+++ b/InformationWallAndroidApp/app/src/main/res/layout/fragment_feed_reader_overview.xml
@@ -18,7 +18,7 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         style="@android:style/TextAppearance.Large"
-        android:gravity="center"
+        android:gravity="center_vertical|center_horizontal"
         android:layout_gravity="center">
     </TextView>
 </LinearLayout>
