--- a/InformationWallAndroidApp/app/src/main/res/layout/fragment_feed_reader_overview.xml
+++ b/InformationWallAndroidApp/app/src/main/res/layout/fragment_feed_reader_overview.xml
@@ -2,7 +2,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
-    tools:showIn="@layout/activity_feed_reader"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -16,7 +15,7 @@
         android:id="@+id/empty"
         android:text="@string/feed_reader_no_feeds"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_height="wrap_content"
         style="@android:style/TextAppearance.Large"
         android:gravity="center_vertical|center_horizontal"
         android:layout_gravity="center">
