--- a/InformationWallAndroidApp/app/src/main/res/layout/fragment_feed_reader_overview.xml
+++ b/InformationWallAndroidApp/app/src/main/res/layout/fragment_feed_reader_overview.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/swipe_refresh_layout"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -20,4 +20,4 @@
         android:gravity="center_vertical|center_horizontal"
         android:layout_gravity="center">
     </TextView>
-</LinearLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
