--- a/InformationWallAndroidApp/app/src/main/res/layout/fragment_blackboard_overview.xml
+++ b/InformationWallAndroidApp/app/src/main/res/layout/fragment_blackboard_overview.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/cl_blackboard_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
@@ -10,4 +11,4 @@
 
     <include layout="@layout/content_blackboard_overview" />
 
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
