--- a/InformationWallAndroidApp/app/src/main/res/layout/blackboard_ex_lv_group.xml
+++ b/InformationWallAndroidApp/app/src/main/res/layout/blackboard_ex_lv_group.xml
@@ -9,26 +9,26 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        >
+        android:orientation="horizontal">
         <TextView
             android:id="@+id/tv_black_board_item_title"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:textStyle="bold"
             android:textAppearance="@style/CompatMaterialTitle"
             android:paddingBottom="5dp"
             android:text="@string/black_board_no_title"
             android:singleLine="false"
-            android:layout_weight="7"/>
+            android:layout_weight="2"/>
 
         <TextView
             android:id="@+id/tv_black_board_item_last_edited"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:singleLine="true"
             android:textAppearance="@style/CompatMaterialCaption"
             android:text="@string/black_board_no_item_information"
-            android:layout_weight="9"
+            android:layout_weight="1"
             android:paddingRight="5dp"
             android:gravity="bottom|right" />
     </LinearLayout>
